--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.People"
         tools:targetApi="31">
         <activity
-            android:name=".ui.persona.PersonasListActivity"
+            android:name="com.anthonychaufrias.people.ui.view.persona.PersonasListActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.persona.PersonaSaveActivity"> </activity>
+        <activity android:name="com.anthonychaufrias.people.ui.view.persona.PersonaSaveActivity"> </activity>
     </application>
 
 </manifest>
