--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
     //Para usar los layout widgets directo
     id 'kotlin-android-extensions'
+
+    //Dagger Hilt
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -54,6 +58,10 @@ dependencies {
 
     //Corrutinas
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+
+    //Dagger Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
